replace "opinion" service and form by "person" form validation "/enter/person/" update person "/enter/person/?person_id=xxx" add login and password

--- a/hashdagger/css/barred.css
+++ b/hashdagger/css/barred.css
@@ -38,6 +38,8 @@ label {
   display: block;
   padding: 10px;
 }
+label.error { float: none; color: red; padding-left: .5em; vertical-align: top; }
+
 p label {
   float: right;
 }
